--- a/core/template/dashboard/cmd.action.select.default.html
+++ b/core/template/dashboard/cmd.action.select.default.html
@@ -5,6 +5,7 @@
   <div class="content-xs">
     <select class="selectCmd">#listValue#</select>
   </div>
+  <template></template>
   <script>
     $(".cmd[data-cmd_uid=#uid#] .selectCmd").on('change', function () {
       jeedom.cmd.execute({id: '#id#', value: {select: $(this).value()}})
