--- a/core/template/dashboard/cmd.action.slider.default.html
+++ b/core/template/dashboard/cmd.action.slider.default.html
@@ -7,9 +7,12 @@
       <span class="value#uid# sliderValue"></span>
     </div>
   </div>
-
+  <template>
+    <div>color : rgb(20,20,20) ({{couleur d'arrière plan}})</div>
+  </template>
   <script>
     $(".cmd[data-cmd_uid=#uid#] .slider.slider-horizontal").css('z-index', 1)
+
     jeedom.cmd.update['#id#'] = function(_options) {
       $(".cmd[data-cmd_id=#id#] .slider").slider({
         min: ('#minValue#' == '') ? 0 : parseInt('#minValue#'),
@@ -29,7 +32,7 @@
       $(".value#uid#").hide()
     })
 
-    if ('#color#' != '') {
+    if ($.issetWidgetOptParam('#color#', 'color')) {
       $('.cmd[data-cmd_id=#id#]').find('div.ui-slider-range').style('background-color', '#color#', 'important')
       $('.cmd[data-cmd_id=#id#]').find('span.ui-slider-handle').style('background-color', '#color#', 'important')
     }
