--- a/core/template/dashboard/cmd.error.html
+++ b/core/template/dashboard/cmd.error.html
@@ -2,4 +2,5 @@
 	<div class="content-xs">
 		<span class="cmdName #hide_name#">#name_display#</span> <span class="iconCmdLine">#state#</span>
 	</div>
+	<template></template>
 </div>
