--- a/core/template/dashboard/cmd.info.binary.tmplicon.html
+++ b/core/template/dashboard/cmd.info.binary.tmplicon.html
@@ -8,21 +8,25 @@
   <div class="value">
     <span class="timeCmd label label-default #history#" data-type="info"></span>
   </div>
+  <template></template>
   <script>
-    jeedom.cmd.update['#id#'] =function(_options){
-      var cmd = $('.cmd[data-cmd_id=#id#]');
-      if('#_time_widget_#' == '1'){
-        jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'));
-      }else{
-        cmd.find('.timeCmd').parent().remove();
+    jeedom.cmd.update['#id#'] =function(_options) {
+      var cmd = $('.cmd[data-cmd_id=#id#]')
+      if ('#_time_widget_#' == '1') {
+        jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'))
+      } else {
+        cmd.find('.timeCmd').parent().remove()
       }
-      cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
+
+      cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
+
       if (_options.display_value == '1') {
-        cmd.find('.iconCmd').empty().append("#_icon_on_#");
-      }else {
-        cmd.find('.iconCmd').empty().append("#_icon_off_#");
+        cmd.find('.iconCmd').empty().append("#_icon_on_#")
+      } else {
+        cmd.find('.iconCmd').empty().append("#_icon_off_#")
       }
     }
-    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
+
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
   </script>
 </div>
