--- a/core/template/dashboard/cmd.info.numeric.rain.html
+++ b/core/template/dashboard/cmd.info.numeric.rain.html
@@ -1,23 +1,37 @@
 <div class="cmd cmd-widget widget-rain #history#" data-type="info" data-subtype="numeric" data-template="rain" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title widget-rain-title #hide_name#">
-        <span class="cmdName">#name_display#</span><br/>
-        <span class="value"></span>
-        <span class="unite">#unite#</span>
+    <span class="cmdName">#name_display#</span><br/>
+    <span class="value"></span>
+    <span class="unite">#unite#</span>
   </div>
   <div class="content widget-rain-container">
     <span class="plage unite" style="display:none;"></span>
     <div class="widget-rain-main">
     </div>
-    <div class="widget-rain-water" style=""></div>
+    <div class="widget-rain-water">
+    </div>
   </div>
   <div class="cmdStats #hide_history#">
     <div class="col-xs-12 center-block">
       <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
     </div>
   </div>
+  <template>
+    <div>color : rgb(0, 155, 255) ({{Couleur de l'eau}}).</div>
+    <div>scale : 0.75 ({{Echelle du widget, entre 0 et 1}}).</div>
+    <div>showRange : 1 ({{Affiche les valeurs minimale et maximale de la commande}}).</div>
+    <div>animate : 0 ({{Pas d'animation}}).</div>
+  </template>
   <script>
+    var waterSvg#id# = "<svg id='water#id#' width='115pt' height='128pt' viewBox='0 0 115 128' xmlns='http://www.w3.org/2000/svg'><path id='water#id#' fill='#00bbcc' stroke-width='.1' opacity='.8' d='M0 0h1.2c2.2.7 4.3 2 6.6 1.7C9.6 1.3 11.3.7 13 0h5c2 .7 4.3 2 6.7 1.7 1.8-.4 3.4-1 5-1.7h4.8c2.3.7 4.6 2.2 7 1.7 1.8-.5 3.3-1 5-1.7H51c2 .8 4.2 2.2 6.6 2 2-.3 4-1.3 5.7-2h4.7c2.2.7 4.2 2 6.5 1.7 2-.4 3.6-1 5.4-1.7H85c2.3.7 4.5 2 7 1.7 1.7-.4 3.3-1 5-1.7h4.7c2.3.7 4.6 2.2 7 1.7 1.7-.5 3.3-1 5-1.7h1.5v128H0V0z'/></svg>"
+    if ('#color#' != '#'+'color'+'#') {
+      waterSvg#id# = waterSvg#id#.replace("fill='#00bbcc'", "fill='#color#'")
+    }
+    var waterSvg64#id# = window.btoa(waterSvg#id#)
+    var cmd_#id# = $('.cmd[data-cmd_id=#id#]')
+    cmd_#id#.find('.widget-rain-water').css('background', "url('data:image/svg+xml;base64," + waterSvg64#id# + "')")
+
     jeedom.cmd.update['#id#'] = function(_options) {
-      var cmd_#id# = $('.cmd[data-cmd_id=#id#]')
       cmd_#id#.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate+'<br/>{{Valeur}} : '+_options.display_value+'#unite#')
 
       var value_#id# = parseFloat(_options.display_value)
@@ -40,19 +54,19 @@
       }
     }
 
-    if ('#scale#' != '') {
-      var el_#id# = $('.cmd[data-cmd_id=#id#] .widget-rain-container')
-      el_#id#.attr('style', 'height:' + el_#id#.height() * '#scale#' + 'px !important')
-      el_#id#.width(el_#id#.width() * '#scale#')
-      if ('#scale#' < '1') $('.cmd[data-cmd_id=#id#] .widget-rain-main').width(el_#id#.width() * '#scale#')
+    if ($.issetWidgetOptParam('#scale#', 'scale')) {
+      var rainContainer_#id# = cmd_#id#.find('.widget-rain-container')
+      rainContainer_#id#.attr('style', 'height:' + rainContainer_#id#.height() * '#scale#' + 'px !important')
+      rainContainer_#id#.width(rainContainer_#id#.width() * '#scale#')
+      if ('#scale#' < '1') $('.cmd[data-cmd_id=#id#] .widget-rain-main').width(rainContainer_#id#.width() * '#scale#')
     }
     if ('#animate#' == '0') {
-      $('.cmd[data-cmd_id=#id#] .widget-rain-water').css('animation','none')
+      cmd_#id#.find('.widget-rain-water').css('animation','none')
     }
     if ('#showRange#' == '1') {
-      $('.cmd[data-cmd_id=#id#] .plage').show()
+      cmd_#id#.find('.plage').show()
     }
 
-    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'})
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
   </script>
 </div>
