--- a/core/template/dashboard/cmd.info.string.buttonImage.html
+++ b/core/template/dashboard/cmd.info.string.buttonImage.html
@@ -2,6 +2,7 @@
 	<div class="content-sm">
     <a class="btn btn-sm btn-default action tooltips">#name_display#</a>
   </div>
+  <template></template>
   <script>
     $('.cmd[data-cmd_uid=#uid#] .action').on('click', function() {
 		$('#md_modal2').dialog({
