--- a/core/template/dashboard/cmd.info.string.tile.html
+++ b/core/template/dashboard/cmd.info.string.tile.html
@@ -5,11 +5,12 @@
 	<div class="content-sm ">
 		<span class="iconCmd"></span>
 	</div>
+	<template></template>
 	<script>
 		jeedom.cmd.update['#id#'] = function(_options){
 			$('.cmd[data-cmd_id=#id#]').attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-			$('.cmd[data-cmd_id=#id#] .iconCmd').empty().append(_options.display_value);
+			$('.cmd[data-cmd_id=#id#] .iconCmd').empty().append(_options.display_value)
 		}
-		jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
+		jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
 	</script>
 </div>
