--- a/core/template/mobile/cmd.action.other.tmplicon.html
+++ b/core/template/mobile/cmd.action.other.tmplicon.html
@@ -4,31 +4,36 @@
     <div class="iconCmd cursor"></div>
     <span class="timeCmd value #value_history#" data-type="info" data-cmd_id="#value_id#"></span>
   </center>
+  <script>
+    jeedom.cmd.update['#id#'] = function(_options) {
+      var cmd#id# = $('.cmd[data-cmd_id=#id#]')
+      if ('#_time_widget_#' == '1') {
+        jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'))
+      } else {
+        cmd#id#.find('.timeCmd').remove()
+      }
+
+      if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
+        if (jeedom.cmd.normalizeName('#name#') == 'on') {
+          cmd#id#.hide();
+        } else {
+          cmd#id#.show()
+          cmd#id#.find('.iconCmd').empty().append("#_icon_on_#")
+        }
+      } else if (['0', 0, 'off'].includes(_options.display_value)) {
+        if (jeedom.cmd.normalizeName('#name#') == 'off') {
+          cmd#id#.hide()
+        } else {
+          cmd#id#.show()
+          cmd#id#.find('.iconCmd').empty().append("#_icon_off_#")
+        }
+      }
+    }
+
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+
+    $('.cmd[data-cmd_uid=#uid#] .iconCmd').off().on('click', function () {
+      jeedom.cmd.execute({id: '#id#'})
+    })
+  </script>
 </div>
-<script>
-  jeedom.cmd.update['#id#'] = function(_options){
-    var cmd = $('.cmd[data-cmd_id=#id#]');
-    if('#_time_widget_#' == '1'){
-      jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'));
-    }else{
-      cmd.find('.timeCmd').remove();
-    }
-    if (_options.display_value == '1' || _options.display_value >= 1 || _options.display_value == '99' || _options.display_value == 99 || _options.display_value == 'on') {
-      if (jeedom.cmd.normalizeName('#name#') == 'on') {
-        cmd.hide();
-      }else{
-        cmd.show().find('.iconCmd').empty().append("#_icon_on_#");
-      }
-    } else {
-      if (jeedom.cmd.normalizeName('#name#') == 'off') {
-        cmd.hide();
-      }else{
-        cmd.show().find('.iconCmd').empty().append("#_icon_off_#");
-      }
-    }
-  }
-  jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
-  $('.cmd[data-cmd_uid=#uid#] .iconCmd').off().on('click', function() {
-    jeedom.cmd.execute({id: '#id#'});
-  });
-</script>
