--- a/core/template/mobile/cmd.action.slider.tmplimg.html
+++ b/core/template/mobile/cmd.action.slider.tmplimg.html
@@ -3,11 +3,20 @@
     <div class="cmdName #hide_name#">#name_display#</div>
     <span class="cursor iconCmd"></span>
     <div class="slider full-width-slider ui-slider">
-      <input type="number" data-type="range" min="#minValue#" max="#maxValue#" value="#state#" data-highlight="true" />
+      <input type="number" data-type="range" min="#minValue#" max="#maxValue#" value="#state#" data-highlight="true" data-role="none"/>
     </div>
     <span class="timeCmd value #value_history#" data-type="info" data-cmd_id="#value_id#"></span>
   </center>
   <script>
+    $('.cmd[data-cmd_id=#id#] input').slider({
+      create: function(event, ui) {
+        if ($.issetWidgetOptParam('#color#', 'color')) {
+          $(event.target.parentNode).find('div.ui-slider-bg').style('background-color', '#color#', 'important')
+          $(event.target.parentNode).find('a.ui-slider-handle').style('background-color', '#color#', 'important')
+        }
+      }
+    })
+
     $('.cmd[data-cmd_id=#id#] .iconCmd').on('click', function() {
       if ($(this).attr('data-state') == 'on') {
         var value = ('#minValue#' == '') ? 0 : parseInt('#minValue#');
@@ -16,10 +25,11 @@
         var value = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
         jeedom.cmd.execute({id: '#id#', value: {slider: value}})
       }
-    });
+    })
+
     $('.cmd[data-cmd_uid=#uid#]').on({
       'slidestop': function(event, ui) {
-      jeedom.cmd.execute({id: '#id#', value: {slider: $(".cmd[data-cmd_uid=#uid#] .slider input").value()}})
+        jeedom.cmd.execute({id: '#id#', value: {slider: event.target.value}})
       }
     }, '.slider')
 
@@ -30,17 +40,19 @@
       } else {
         cmd.find('.timeCmd').remove()
       }
+
       var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
       var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
       var stateValue = ('#state#' == '') ? 0 : parseInt(_options.display_value)
       cmd.find('.slider input').value(stateValue)
       if (stateValue > minValue) {
         cmd.attr('data-state','on')
-        cmd.find('.iconCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#","#_img_dark_on_#"))
+        cmd.find('.iconCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
       } else {
         cmd.attr('data-state','off')
-        cmd.find('.iconCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#","#_img_dark_off_#"))
+        cmd.find('.iconCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
       }
+
       var style = ''
       if (!isNaN('#_mobile_width_#')) {
         style = 'max-width:#_mobile_width_#px !important;'
@@ -49,9 +61,9 @@
       cmd.off('changeThemeEvent').on('changeThemeEventCmd',function (event, theme) {
         var cmd = $('.cmd[data-cmd_id=#id#]')
         if (cmd.attr('data-state') == 'on') {
-          cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#","#_img_dark_on_#"))
+          cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
         } else {
-          cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#","#_img_dark_off_#"))
+          cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
         }
         var style = ''
         if (!isNaN('#_mobile_width_#')) {
@@ -60,7 +72,9 @@
         cmd.find('.imgCmd img').attr('style',style)
       });
     }
+
     jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'})
+
     $('body').on('changeThemeEvent', function (event,theme) {
       $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd',theme)
     });
