--- a/core/template/mobile/cmd.info.numeric.tile.html
+++ b/core/template/mobile/cmd.info.numeric.tile.html
@@ -4,8 +4,8 @@
 		<span class="state">#state#</span>#unite#
 	</center>
 	<script>
-		jeedom.cmd.update['#id#'] = function(_options){
-			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value);
+		jeedom.cmd.update['#id#'] = function(_options) {
+			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value)
 		}
 	</script>
 </div>
