--- a/core/template/mobile/scenario.html
+++ b/core/template/mobile/scenario.html
@@ -15,38 +15,39 @@
   </center>
   <script>
     $('.scenario[data-scenario_id=#id#] .changeScenarioState').on('click', function() {
-      $('.scenario[data-scenario_id=#id#] .state').empty().append('<i class="fa fa-spinner fa-spin"></i>');
+      $('.scenario[data-scenario_id=#id#] .state').empty().append('<i class="fa fa-spinner fa-spin"></i>')
       jeedom.scenario.changeState({
         id: $(this).closest('.scenario').attr('data-scenario_id'),
         state: $(this).attr('data-state'),
         error: function(error) {
-          $('#div_alert').showAlert({message: error.message, level: 'danger'});
-          $('.scenario[data-scenario_id=#id#] .state').empty().append('<i class="fa fa-times"></i>');
+          $('#div_alert').showAlert({message: error.message, level: 'danger'})
+          $('.scenario[data-scenario_id=#id#] .state').empty().append('<i class="fa fa-times"></i>')
         }
-      });
-    });
-    jeedom.scenario.update['#id#'] =function(_options){
-      if(typeof _options.icon != 'undefined' && _options.icon != ''){
-        $('.scenario[data-scenario_id=#id#] .state').empty().append(_options.icon);
+      })
+    })
+
+    jeedom.scenario.update['#id#'] =function(_options) {
+      if (typeof _options.icon != 'undefined' && _options.icon != '') {
+        $('.scenario[data-scenario_id=#id#] .state').empty().append(_options.icon)
       }
-      $('.scenario[data-scenario_id=#id#] .changeScenarioState').hide();
+      $('.scenario[data-scenario_id=#id#] .changeScenarioState').hide()
       if (typeof _options.isActive == 'undefined' || _options.isActive == '1') {
         $('.scenario[data-scenario_id=#id#]').removeClass('disabled');
         if (_options.state == 'in progress' || _options.state == 'starting') {
-          $('.scenario[data-scenario_id=#id#] .state').empty().append('<i class="fa fa-spinner fa-spin"></i>');
-          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=stop]').show();
-          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=deactivate]').show();
-        }else if (_options.state == 'error' || _options.state == 'stop') {
-          $('.scenario[data-scenario_id=#id#] .state').empty().append('#icon#');
-          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=start]').show();
-          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=deactivate]').show();
+          $('.scenario[data-scenario_id=#id#] .state').empty().append('<i class="fa fa-spinner fa-spin"></i>')
+          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=stop]').show()
+          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=deactivate]').show()
+        } else if (_options.state == 'error' || _options.state == 'stop') {
+          $('.scenario[data-scenario_id=#id#] .state').empty().append('#icon#')
+          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=start]').show()
+          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=deactivate]').show()
         }
       } else {
-        $('.scenario[data-scenario_id=#id#]').addClass('disabled');
-        $('.scenario[data-scenario_id=#id#] .state').empty().append('#icon#');
-        $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=activate]').show();
+        $('.scenario[data-scenario_id=#id#]').addClass('disabled')
+        $('.scenario[data-scenario_id=#id#] .state').empty().append('#icon#')
+        $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=activate]').show()
       }
     }
-    jeedom.scenario.update['#id#']({isActive:'#isActive#',state:'#state#',lastLaunch:'#lastLaunch#',icon:'#icon#'});
+    jeedom.scenario.update['#id#']({isActive: '#isActive#', state: '#state#', lastLaunch: '#lastLaunch#', icon: '#icon#'})
   </script>
 </div>
