--- a/core/template/dashboard/cmd.action.slider.tmplicon.html
+++ b/core/template/dashboard/cmd.action.slider.tmplicon.html
@@ -11,16 +11,19 @@
     </div>
     <span class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></span>
   </div>
+  <template>
+    <div>color : rgb(20,20,20) ({{Couleur du curseur et valeur}})</div>
+  </template>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options){
-      var cmd = $('.cmd[data-cmd_id=#id#]');
-      if('#_time_widget_#' == '1'){
-        jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'));
-      }else{
-        cmd.find('.timeCmd').remove();
+    jeedom.cmd.update['#id#'] = function(_options) {
+      var cmd = $('.cmd[data-cmd_id=#id#]')
+      if ('#_time_widget_#' == '1') {
+        jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'))
+      } else {
+        cmd.find('.timeCmd').remove()
       }
-      var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#');
-      var maxValue = ('#minValue#' == '') ? 100 : parseInt('#maxValue#');
+      var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
+      var maxValue = ('#minValue#' == '') ? 100 : parseInt('#maxValue#')
       var stateValue = ('#state#' == '') ? 0 : parseInt(_options.display_value)
       cmd.find('.slider').slider({
         min: minValue,
@@ -29,29 +32,38 @@
         range: "min",
         animate: false,
         slide: function(event, ui) {
-          $(".value#uid#").show();
-          $(".value#uid#").html(ui.value);
+          $(".value#uid#").show()
+          $(".value#uid#").html(ui.value)
         }
-      });
+      })
+
       if (stateValue > minValue) {
-        cmd.find('.iconCmd').empty().append("#_icon_on_#").attr('data-state', 'on');
-      }else {
-        cmd.find('.iconCmd').empty().append("#_icon_off_#").attr('data-state', 'off');
+        cmd.find('.iconCmd').empty().append("#_icon_on_#").attr('data-state', 'on')
+      } else {
+        cmd.find('.iconCmd').empty().append("#_icon_off_#").attr('data-state', 'off')
       }
     }
-    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
+
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+
     $('.iconCmd#uid#').off().on('click', function() {
       if ($(this).attr('data-state') == 'on') {
-        var value = ('#minValue#' == '') ? 0 : parseInt('#minValue#');
-        jeedom.cmd.execute({id: '#id#', value: {slider: value}});
+        var value = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
+        jeedom.cmd.execute({id: '#id#', value: {slider: value}})
       } else {
-        var value = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#');
-        jeedom.cmd.execute({id: '#id#', value: {slider: value}});
+        var value = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
+        jeedom.cmd.execute({id: '#id#', value: {slider: value}})
       }
-    });
+    })
+
     $(".cmd[data-cmd_uid=#uid#] .slider").on('slidestop', function (event,ui) {
-      jeedom.cmd.execute({id: '#id#', value: {slider: ui.value}});
-      $(".value#uid#").hide();
-    });
+      jeedom.cmd.execute({id: '#id#', value: {slider: ui.value}})
+      $(".value#uid#").hide()
+    })
+
+    if ($.issetWidgetOptParam('#color#', 'color')) {
+      $('.cmd[data-cmd_id=#id#]').find('div.ui-slider-range').style('background-color', '#color#', 'important')
+      $('.cmd[data-cmd_id=#id#]').find('span.ui-slider-handle').style('background-color', '#color#', 'important')
+    }
   </script>
 </div>
