--- a/core/template/dashboard/cmd.action.text.default.html
+++ b/core/template/dashboard/cmd.action.text.default.html
@@ -5,6 +5,7 @@
   <div class="value">
     <a class='btn btn-success btn-xs execute'>#name#</a>
   </div>
+  <template></template>
   <script>
     $('.cmd[data-cmd_id=#id#] .execute').on('click', function() {
       jeedom.cmd.execute({id: '#id#', value: {text: $('.cmd[data-cmd_id=#id#] .text').value()}});
