--- a/core/template/dashboard/cmd.info.numeric.light.html
+++ b/core/template/dashboard/cmd.info.numeric.light.html
@@ -5,6 +5,7 @@
   <div class="content-sm ">
     <span class="iconCmd"></span>
   </div>
+  <template></template>
   <script>
     jeedom.cmd.update['#id#'] = function(_options){
       $('.cmd[data-cmd_id=#id#]').attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
