--- a/core/template/dashboard/cmd.info.numeric.tile.html
+++ b/core/template/dashboard/cmd.info.numeric.tile.html
@@ -11,11 +11,13 @@
 			<span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
 		</div>
 	</div>
+	<template></template>
 	<script>
-		jeedom.cmd.update['#id#'] = function(_options){
-			$('.cmd[data-cmd_id=#id#]').attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value);
+		jeedom.cmd.update['#id#'] = function(_options) {
+			$('.cmd[data-cmd_id=#id#]').attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
+			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value)
 		}
-		jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
+
+		jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
 	</script>
 </div>
