--- a/core/template/mobile/cmd.action.color.default.html
+++ b/core/template/mobile/cmd.action.color.default.html
@@ -3,11 +3,11 @@
 	<script>
 		jeedom.cmd.update['#id#'] = function(_options){
 			$('.cmd[data-cmd_uid=#uid#]:last .action_colorpicker_change').off('change')
-			$('.cmd[data-cmd_uid=#uid#] .action_colorpicker_change').value((_options.display_value != '') ? _options.display_value.substr(0,7) : _options.display_value);
+			$('.cmd[data-cmd_uid=#uid#] .action_colorpicker_change').value((_options.display_value != '') ? _options.display_value.substr(0,7) : _options.display_value)
 			$('.cmd[data-cmd_uid=#uid#]:last .action_colorpicker_change').on('change', function() {
-				jeedom.cmd.execute({id: '#id#', value: {color: $(this).value()}});
+				jeedom.cmd.execute({id: '#id#', value: {color: $(this).value()}})
 			});
 		}
-		jeedom.cmd.update['#id#']({display_value:'#state#'});
+		jeedom.cmd.update['#id#']({display_value: '#state#'})
 	</script>
 </div>
