--- a/core/template/mobile/cmd.action.message.default.html
+++ b/core/template/mobile/cmd.action.message.default.html
@@ -1,16 +1,17 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="message" data-template="default" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-	<input class="title" placeholder="#title_placeholder#" data-cmd_id="#id#"/>
-	<textarea rows="2" class="message" placeholder="#message_placeholder#" data-cmd_id="#id#"></textarea>
+	<input class="title" placeholder="#title_placeholder#" data-cmd_id="#id#" value="#title#"/>
+	<textarea rows="2" class="message" placeholder="#message_placeholder#" data-cmd_id="#id#">#message#</textarea>
 	<center><a class="action ui-btn ui-mini ui-btn-inline execute ui-btn-raised">#name_display#</a></center>
 	<script>
-		if('#title_disable#' == '1'){
-			$('.cmd[data-cmd_uid=#uid#] .title').hide();
+		if('#title_disable#' == '1') {
+			$('.cmd[data-cmd_uid=#uid#] .title').hide()
 		}
-		if('#message_disable#' == '1'){
-			$('.cmd[data-cmd_uid=#uid#] .message').hide();
+		if('#message_disable#' == '1') {
+			$('.cmd[data-cmd_uid=#uid#] .message').hide()
 		}
+
 		$('.cmd[data-cmd_uid=#uid#] .execute').on('click', function () {
-			jeedom.cmd.execute({id: '#id#', value: {title: $('.cmd[data-cmd_uid=#uid#] .title').value(), message: $('.cmd[data-cmd_uid=#uid#] .message').value()}});
-		});
+			jeedom.cmd.execute({id: '#id#', value: {title: $('.cmd[data-cmd_uid=#uid#] .title').value(), message: $('.cmd[data-cmd_uid=#uid#] .message').value()}})
+		})
 	</script>
 </div>
