--- a/core/template/mobile/cmd.action.other.binaryDefault.html
+++ b/core/template/mobile/cmd.action.other.binaryDefault.html
@@ -1,28 +1,30 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="other" data-template="binaryDefault" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-    <center>
-        <span class="cursor iconCmd"></span>
-    </center>
-    <script>
-        jeedom.cmd.update['#id#'] = function(_options){
-            if (_options.display_value == '1' || _options.display_value == 1 || _options.display_value == '99' || _options.display_value == 99 || _options.display_value == 'on') {
-                if (jeedom.cmd.normalizeName('#name#') == 'on') {
-                    $('.cmd[data-cmd_id=#id#]').hide();
-                }else{
-                    $('.cmd[data-cmd_id=#id#]').show();
-                    $('.cmd[data-cmd_id=#id#] .iconCmd').empty().append('<i class="fas fa-check"></i>');
-                }
-            } else {
-                if (jeedom.cmd.normalizeName('#name#') == 'off') {
-                    $('.cmd[data-cmd_id=#id#]').hide();
-                }else{
-                    $('.cmd[data-cmd_id=#id#]').show();
-                    $('.cmd[data-cmd_id=#id#] .iconCmd').empty().append('<i class="fas fa-times"></i>');
-                }
-            }
+  <center>
+    <span class="cursor iconCmd"></span>
+  </center>
+  <script>
+    jeedom.cmd.update['#id#'] = function(_options) {
+      if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
+        if (jeedom.cmd.normalizeName('#name#') == 'on') {
+          $('.cmd[data-cmd_id=#id#]').hide()
+        } else {
+          $('.cmd[data-cmd_id=#id#]').show()
+          $('.cmd[data-cmd_id=#id#] .iconCmd').empty().append('<i class="fas fa-check"></i>')
         }
-        jeedom.cmd.update['#id#']({display_value:'#state#'});
-        $('.cmd[data-cmd_uid=#uid#] .iconCmd').off().on('click', function () {
-            jeedom.cmd.execute({id: '#id#'});
-        });
-    </script>
+      } else if (['0', 0, 'off'].includes(_options.display_value)) {
+        if (jeedom.cmd.normalizeName('#name#') == 'off') {
+          $('.cmd[data-cmd_id=#id#]').hide()
+        } else {
+          $('.cmd[data-cmd_id=#id#]').show()
+          $('.cmd[data-cmd_id=#id#] .iconCmd').empty().append('<i class="fas fa-times"></i>')
+        }
+      }
+    }
+
+    jeedom.cmd.update['#id#']({display_value:'#state#'})
+
+    $('.cmd[data-cmd_uid=#uid#] .iconCmd').off().on('click', function () {
+      jeedom.cmd.execute({id: '#id#'})
+    })
+  </script>
 </div>
