--- a/core/template/mobile/cmd.action.other.default.html
+++ b/core/template/mobile/cmd.action.other.default.html
@@ -1,8 +1,8 @@
 <span class="cmd cmd-widget" data-type="action" data-subtype="other" data-template="default" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-    <a class="action ui-btn ui-mini ui-btn-inline ui-btn-raised">#name_display#</a>
-    <script>
-        $('.cmd[data-cmd_uid=#uid#] .action').click(function() {
-            jeedom.cmd.execute({id: '#id#'});
-        });
-    </script>
+  <a class="action ui-btn ui-mini ui-btn-inline ui-btn-raised">#name_display#</a>
+  <script>
+    $('.cmd[data-cmd_uid=#uid#] .action').click(function() {
+       jeedom.cmd.execute({id: '#id#'})
+    })
+  </script>
 </span>
