--- a/core/template/mobile/cmd.action.other.tmpliconline.html
+++ b/core/template/mobile/cmd.action.other.tmpliconline.html
@@ -3,28 +3,31 @@
     <span class="cmdName #hide_name#">#valueName#</span>
     <span class="iconCmdLine cursor"></span>
   </center>
-</div>
-<script>
-  jeedom.cmd.update['#id#'] = function(_options){
-    var cmd = $('.cmd[data-cmd_id=#id#]');
-    if (_options.display_value == '1' || _options.display_value >= 1 || _options.display_value == '99' || _options.display_value == 99 || _options.display_value == 'on') {
-      if (jeedom.cmd.normalizeName('#name#') == 'on') {
-        cmd.hide();
-      }else{
-        cmd.show();
-        cmd.find('.iconCmdLine').empty().append("#_icon_on_#");
-      }
-    } else {
-      if (jeedom.cmd.normalizeName('#name#') == 'off') {
-        cmd.hide();
-      }else{
-        cmd.show();
-        cmd.find('.iconCmdLine').empty().append("#_icon_off_#");
+  <script>
+    jeedom.cmd.update['#id#'] = function(_options) {
+      var cmd#id# = $('.cmd[data-cmd_id=#id#]')
+
+      if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
+        if (jeedom.cmd.normalizeName('#name#') == 'on') {
+          cmd#id#.hide()
+        } else {
+          cmd#id#.show()
+          cmd#id#.find('.iconCmdLine').empty().append("#_icon_on_#")
+        }
+      } else {
+        if (jeedom.cmd.normalizeName('#name#') == 'off') {
+          cmd#id#.hide()
+        } else {
+          cmd#id#.show()
+          cmd#id#.find('.iconCmdLine').empty().append("#_icon_off_#")
+        }
       }
     }
-  }
-  jeedom.cmd.update['#id#']({display_value:'#state#'});
-  $('.cmd[data-cmd_uid=#uid#] .iconCmdLine').off().on('click', function() {
-    jeedom.cmd.execute({id: '#id#'});
-  });
-</script>
+
+    jeedom.cmd.update['#id#']({display_value: '#state#'})
+
+    $('.cmd[data-cmd_uid=#uid#] .iconCmdLine').off().on('click', function() {
+      jeedom.cmd.execute({id: '#id#'})
+    })
+  </script>
+</div>
