--- a/core/template/mobile/cmd.action.slider.button.html
+++ b/core/template/mobile/cmd.action.slider.button.html
@@ -2,43 +2,41 @@
   <div class="cmdName #hide_name#">#name_display#</div>
   <div data-role="controlgroup" data-type="horizontal">
     <a class="action ui-btn ui-mini ui-btn-inline ui-btn-raised bt_minus roundedLeft"><i class="fas fa-minus"></i></a>
-    <input type="text" class="value" data-mini="true" value="#state# #unite#" data-wrapper-class="controlgroup-textinput ui-btn"/>
+    <input type="text" class="in_value" data-mini="true" value="#state# #unite#" data-wrapper-class="controlgroup-textinput ui-btn" disabled/>
     <a class="action ui-btn ui-mini ui-btn-inline ui-btn-raised bt_plus roundedRight"><i class="fa fa-plus"></i></a>
   </div>
   <script>
-    $('.cmd[data-cmd_uid=#uid#] .bt_plus').on('click', function() {
-      var max = ('#maxValue#' == '') ?  Number.MAX_VALUE : parseFloat('#maxValue#');
-      var step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#');
-      if (parseFloat($('.cmd[data-cmd_uid=#uid#] .value').val()) <= max - step ){
-        jeedom.cmd.update['#id#']({display_value:parseFloat($('.cmd[data-cmd_uid=#uid#] .value').val()) + step});
-        $('.cmd[data-cmd_uid=#uid#] .value').trigger('change');
+    $('.cmd[data-cmd_uid=#uid#] .bt_plus').on('click', function () {
+      var max = ('#maxValue#' == '') ?  Number.MAX_VALUE : parseFloat('#maxValue#')
+      var step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#')
+      if (parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) <= max - step ) {
+        jeedom.cmd.update['#id#']({display_value:parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) + step})
+        $('.cmd[data-cmd_uid=#uid#] .in_value').trigger('change')
       }
-    });
-    $('.cmd[data-cmd_uid=#uid#] .bt_minus').on('click', function() {
-      var min= ('#minValue#' == '') ? Number.MIN_VALUE : parseFloat('#minValue#');
-      var step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#');
-      if (parseFloat($('.cmd[data-cmd_uid=#uid#] .value').val()) >= min + step ){
-        jeedom.cmd.update['#id#']({display_value:parseFloat($('.cmd[data-cmd_uid=#uid#] .value').val()) - step});
-        $('.cmd[data-cmd_uid=#uid#] .value').trigger('change');
+    })
+
+    $('.cmd[data-cmd_uid=#uid#] .bt_minus').on('click', function () {
+      var min = ('#minValue#' == '') ? Number.MIN_VALUE : parseFloat('#minValue#')
+      var step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#')
+      if (parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) >= min + step) {
+        jeedom.cmd.update['#id#']({display_value:parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) - step})
+        $('.cmd[data-cmd_uid=#uid#] .in_value').trigger('change')
       }
-    });
-    $('.cmd[data-cmd_uid=#uid#] .value').on('change', function () {
+    })
+
+    $('.cmd[data-cmd_uid=#uid#] .in_value').on('change', function () {
       if (typeof timerHandle#uid# !== 'undefined') {
-        clearTimeout(timerHandle#uid#);
+        clearTimeout(timerHandle#uid#)
       }
       timerHandle#uid# = setTimeout(function() {
-        jeedom.cmd.execute({id:'#id#', value: {slider: $('.cmd[data-cmd_uid=#uid#] .value').val().replace("#unite#", "").replace(" ", "")}});
+        jeedom.cmd.execute({id:'#id#', value: {slider: $('.cmd[data-cmd_uid=#uid#] .in_value').val().replace("#unite#", "").replace(" ", "")}})
       }, 1000)
-    });
-    jeedom.cmd.update['#id#'] = function(_options){
-      $('.cmd[data-cmd_uid=#uid#] .value').val(_options.display_value+' #unite#');
+    })
+
+    jeedom.cmd.update['#id#'] = function(_options) {
+      $('.cmd[data-cmd_uid=#uid#] .in_value').val(_options.display_value+' #unite#')
     }
-    jeedom.cmd.update['#id#']({display_value:'#state#'});
+
+    jeedom.cmd.update['#id#']({display_value: '#state#'})
   </script>
-  <style>
-    .controlgroup-textinput{
-      padding-top:.50em;
-      padding-bottom:.12em;
-    }
-  </style>
 </div>
