--- a/core/template/mobile/cmd.action.text.default.html
+++ b/core/template/mobile/cmd.action.text.default.html
@@ -3,7 +3,7 @@
 	<center><a class="action ui-btn ui-mini ui-btn-inline execute" >#name_display#</a></center>
 	<script>
 		$('.cmd[data-cmd_uid=#uid#] .execute').on('click', function () {
-			jeedom.cmd.execute({id: '#id#', value: {text: $('.cmd[data-cmd_uid=#uid#] .text').value()}});
-		});
+			jeedom.cmd.execute({id: '#id#', value: {text: $('.cmd[data-cmd_uid=#uid#] .text').value()}})
+		})
 	</script>
 </div>
