--- a/core/template/mobile/cmd.info.binary.tmplicon.html
+++ b/core/template/mobile/cmd.info.binary.tmplicon.html
@@ -5,19 +5,19 @@
 		<span class="timeCmd value #history#" data-type="info"></span>
 	</center>
 	<script>
-		jeedom.cmd.update['#id#'] = function(_options){
-			var cmd = $('.cmd[data-cmd_id=#id#]');
-			if('#_time_widget_#' == '1'){
-				jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'));
-			}else{
+		jeedom.cmd.update['#id#'] = function(_options) {
+			var cmd = $('.cmd[data-cmd_id=#id#]')
+			if ('#_time_widget_#' == '1') {
+				jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'))
+			} else {
 				cmd.find('.timeCmd').remove();
 			}
 			if (_options.display_value == '1') {
-				cmd.find('.iconCmd').empty().append("#_icon_on_#");
+				cmd.find('.iconCmd').empty().append("#_icon_on_#")
 			}else {
-				cmd.find('.iconCmd').empty().append("#_icon_off_#");
+				cmd.find('.iconCmd').empty().append("#_icon_off_#")
 			}
 		}
-		jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
+		jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'})
 	</script>
 </div>
