--- a/core/template/mobile/cmd.info.numeric.compass.html
+++ b/core/template/mobile/cmd.info.numeric.compass.html
@@ -3,21 +3,36 @@
     <div class="cmdName #hide_name#">#name_display#</div>
       <div class="widget-compass-container">
       <div class="widget-compass-outline"></div>
-      <div class="widget-compass-needle"></div>
+      <div class="widget-compass-needle-placer">
+        <div class="widget-compass-needle"></div>
+      </div>
       <div class="state"></div>
       <div class="winDir"></div>
     </div>
   </center>
   <script>
+    var cmd#id# = $('.cmd[data-cmd_id=#id#]')
     jeedom.cmd.update['#id#'] = function(_options){
-      var cmd_#id# = $('.cmd[data-cmd_id=#id#]');
-      var directions_#id# = ['Nord', 'Nord-Est', 'Est', 'Sud-Est', 'Sud', 'Sud-Ouest', 'Ouest', 'Nord-Ouest'];
-      var windDir_#id# = directions_#id#[Math.round(((_options.display_value %= 360) < 0 ? _options.display_value + 360 : _options.display_value) / 45) % 8];
-      cmd_#id#.find('.widget-compass-needle').css('transform', 'rotate(' + _options.display_value +'deg)');
-      cmd_#id#.find('.state').text(_options.display_value.toString()+'°')
-      cmd_#id#.find('.winDir').html(windDir_#id#)
+      let directions#id# = ['{{Nord}}', '{{Nord-Est}}', '{{Est}}', '{{Sud-Est}}', '{{Sud}}', '{{Sud-Ouest}}', '{{Ouest}}', '{{Nord-Ouest}}']
+      var windDir#id# = directions#id#[Math.round(((_options.display_value %= 360) < 0 ? _options.display_value + 360 : _options.display_value) / 45) % 8]
+      cmd#id#.find('.widget-compass-needle-placer').css('transform', 'rotate(' + _options.display_value +'deg)')
+      cmd#id#.find('.state').text(_options.display_value.toString()+'°')
+      cmd#id#.find('.winDir').html(windDir#id#)
     }
 
-    jeedom.cmd.update['#id#']({display_value:'#state#'});
+    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'})
+
+    if ($.issetWidgetOptParam('#needle_color#', 'needle_color')) {
+      cmd#id#.find('.widget-compass-needle').css('border-top-color','#needle_color#')
+    }
+    if ($.issetWidgetOptParam('#ns_color#', 'ns_color')) {
+      cmd#id#.find('.widget-compass-outline').css({'border-top-color' : '#ns_color#', 'border-bottom-color' : '#ns_color#'})
+    }
+    if ($.issetWidgetOptParam('#oe_color#', 'oe_color')) {
+      cmd#id#.find('.widget-compass-outline').css({'border-left-color' : '#oe_color#', 'border-right-color' : '#oe_color#'})
+    }
+    if ($.issetWidgetOptParam('#scale#', 'scale')) {
+      cmd#id#.find('.widget-compass-container').css('transform','scale(#scale#)')
+    }
   </script>
 </div>
