--- a/core/template/mobile/cmd.info.numeric.default.html
+++ b/core/template/mobile/cmd.info.numeric.default.html
@@ -1,8 +1,8 @@
 <div class="cmd cmd-widget" data-type="info" data-subtype="numeric" data-template="default" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
 	<span class="cmdName #hide_name#">#name_display#</span> <strong class="state">#state#</strong> #unite#
 	<script>
-		jeedom.cmd.update['#id#'] = function(_options){
-			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value);
+		jeedom.cmd.update['#id#'] = function(_options) {
+			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value)
 		}
 	</script>
 </div>
