--- a/core/template/mobile/cmd.info.numeric.line.html
+++ b/core/template/mobile/cmd.info.numeric.line.html
@@ -3,17 +3,18 @@
 		<span class="cmdName #hide_name#">#name_display#</span> <strong class="state"></strong>#unite#
 	</center>
 	<script>
-		jeedom.cmd.update['#id#'] = function(_options){
-			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value);
-			if(_options.alertLevel){
-				$('.cmd[data-cmd_id=#id#]').css('background-color', '');
-				if(_options.alertLevel == 'warning'){
-					$('.cmd[data-cmd_id=#id#]').css({"background-color":"#b2b200"});
-				}else if(_options.alertLevel == 'danger'){
-					$('.cmd[data-cmd_id=#id#]').css({"background-color":"#da2e37"});
+		jeedom.cmd.update['#id#'] = function(_options) {
+			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value)
+			if (_options.alertLevel) {
+				$('.cmd[data-cmd_id=#id#]').css('background-color', '')
+				if (_options.alertLevel == 'warning') {
+					$('.cmd[data-cmd_id=#id#]').css({"background-color":"#b2b200"})
+				} else if (_options.alertLevel == 'danger') {
+					$('.cmd[data-cmd_id=#id#]').css({"background-color":"#da2e37"})
 				}
 			}
 		}
-		jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
+
+		jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
 	</script>
 </div>
