--- a/core/template/mobile/cmd.info.numeric.rain.html
+++ b/core/template/mobile/cmd.info.numeric.rain.html
@@ -16,40 +16,50 @@
     </div>
   </div>
   <script>
+    var waterSvg#id# = "<svg id='water#id#' width='115pt' height='128pt' viewBox='0 0 115 128' xmlns='http://www.w3.org/2000/svg'><path id='water#id#' fill='#00bbcc' stroke-width='.1' opacity='.8' d='M0 0h1.2c2.2.7 4.3 2 6.6 1.7C9.6 1.3 11.3.7 13 0h5c2 .7 4.3 2 6.7 1.7 1.8-.4 3.4-1 5-1.7h4.8c2.3.7 4.6 2.2 7 1.7 1.8-.5 3.3-1 5-1.7H51c2 .8 4.2 2.2 6.6 2 2-.3 4-1.3 5.7-2h4.7c2.2.7 4.2 2 6.5 1.7 2-.4 3.6-1 5.4-1.7H85c2.3.7 4.5 2 7 1.7 1.7-.4 3.3-1 5-1.7h4.7c2.3.7 4.6 2.2 7 1.7 1.7-.5 3.3-1 5-1.7h1.5v128H0V0z'/></svg>"
+    if ('#color#' != '#'+'color'+'#') {
+      waterSvg#id# = waterSvg#id#.replace("fill='#00bbcc'", "fill='#color#'")
+    }
+    var waterSvg64#id# = window.btoa(waterSvg#id#)
+    var cmd_#id# = $('.cmd[data-cmd_id=#id#]')
+    cmd_#id#.find('.widget-rain-water').css('background', "url('data:image/svg+xml;base64," + waterSvg64#id# + "')")
+
     jeedom.cmd.update['#id#'] = function(_options) {
-      var cmd_#id# = $('.cmd[data-cmd_id=#id#]')
-      var value_#id# = parseFloat(_options.display_value);
-      cmd_#id#.find('.value').empty().append(value_#id#);
+      cmd_#id#.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate+'<br/>{{Valeur}} : '+_options.display_value+'#unite#')
+
+      var value_#id# = parseFloat(_options.display_value)
+      cmd_#id#.find('.value').empty().append(value_#id#)
 
       var minValue_#id# = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
       var maxValue_#id# = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
       if (value_#id# >= maxValue_#id#) {
-        value_#id# = maxValue_#id#;
-        cmd_#id#.find('.value').css('color','var(--al-danger-color)');
+        value_#id# = maxValue_#id#
+        cmd_#id#.find('.value').css('color','var(--al-danger-color)')
       } else {
-        cmd_#id#.find('.value').css('color','');
+        cmd_#id#.find('.value').css('color','')
       }
       var height_#id# = ((value_#id# - minValue_#id#) * 100) / (maxValue_#id# - minValue_#id#)
       height_#id# = Math.round(parseFloat(height_#id#) * 10) / 10
       cmd_#id#.find('.widget-rain-water').height(height_#id#+'%')
 
       if ('#showRange#' == '1') {
-        cmd_#id#.find('.plage').empty().append(minValue_#id# + ' | ' + maxValue_#id#);
+        cmd_#id#.find('.plage').empty().append(minValue_#id# + ' | ' + maxValue_#id#)
       }
     }
 
-    if ('#scale#' != '') {
-      var el_#id# = $('.cmd[data-cmd_id=#id#] .widget-rain-container')
-      el_#id#.width(el_#id#.width() * '#scale#')
-      el_#id#.height(el_#id#.height() * '#scale#')
+    if ($.issetWidgetOptParam('#scale#', 'scale')) {
+      var rainContainer_#id# = cmd_#id#.find('.widget-rain-container')
+      rainContainer_#id#.attr('style', 'height:' + rainContainer_#id#.height() * '#scale#' + 'px !important')
+      rainContainer_#id#.width(rainContainer_#id#.width() * '#scale#')
+      if ('#scale#' < '1') $('.cmd[data-cmd_id=#id#] .widget-rain-main').width(rainContainer_#id#.width() * '#scale#')
     }
     if ('#animate#' == '0') {
-      $('.cmd[data-cmd_id=#id#] .widget-rain-water').css('animation','none')
+      cmd_#id#.find('.widget-rain-water').css('animation','none')
     }
     if ('#showRange#' == '1') {
-      $('.cmd[data-cmd_id=#id#] .plage').show()
+      cmd_#id#.find('.plage').show()
     }
 
-    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
+    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'})
   </script>
 </div>
