--- a/core/template/mobile/cmd.info.string.default.html
+++ b/core/template/mobile/cmd.info.string.default.html
@@ -1,22 +1,24 @@
 <div class="cmd cmd-widget" data-type="info" data-subtype="string" data-template="default" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-	<span class="cmdName #hide_name#">#name_display#</span> <strong class="state">#state#</strong>
-	<script>
-		jeedom.cmd.update['#id#'] = function(_options){
-			cmd = $('.cmd[data-cmd_id=#id#]');
-			cmd.find('.state').empty().append(_options.display_value);
-			if(_options.alertLevel){
-				if(_options.alertLevel == 'warning'){
-					cmd.addClass('label label-warning')
-					cmd.attr('data-alertlevel','warning');
-				}else if(_options.alertLevel == 'danger'){
-					cmd.addClass('label label-danger')
-					cmd.attr('data-alertlevel','danger');
-				}else{
-					cmd.removeClass('label label-warning label-danger')
-					cmd.attr('data-alertlevel','none');
-				}
-			}
-		}
-		jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
-	</script>
+  <span class="cmdName #hide_name#">#name_display#</span> <strong class="state">#state#</strong>
+  <script>
+    jeedom.cmd.update['#id#'] = function(_options) {
+      cmd = $('.cmd[data-cmd_id=#id#]')
+      cmd.find('.state').empty().append(_options.display_value)
+
+      if (_options.alertLevel) {
+        if (_options.alertLevel == 'warning') {
+          cmd.addClass('label label-warning')
+          cmd.attr('data-alertlevel','warning')
+        } else if (_options.alertLevel == 'danger') {
+          cmd.addClass('label label-danger')
+          cmd.attr('data-alertlevel','danger')
+        } else {
+          cmd.removeClass('label label-warning label-danger')
+          cmd.attr('data-alertlevel','none')
+        }
+      }
+    }
+
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+  </script>
 </div>
