--- a/core/template/mobile/cmd.info.string.multiline.html
+++ b/core/template/mobile/cmd.info.string.multiline.html
@@ -1,28 +1,31 @@
 <div class="cmd cmd-widget #history#" data-type="info" data-subtype="string" data-template="multiline" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-	<div class="content-xs">
-		<span class="cmdName #hide_name#">#name_display#<br/></span><strong class="state" ></strong>
-	</div>
-	<script>
-		jeedom.cmd.update['#id#'] = function(_options){
-			cmd =	$('.cmd[data-cmd_id=#id#]');
-			cmd.attr('title','Date de valeur : '+_options.valueDate+'<br/>Date de collecte : '+_options.collectDate)
-			cmd.find('.state').empty().append(_options.display_value);
-			if(_options.alertLevel){
-				if(_options.alertLevel == 'warning'){
-					cmd.addClass('label-warning')
-					cmd.attr('data-alertlevel','warning');
-				}else if(_options.alertLevel == 'danger'){
-					cmd.addClass('label-danger')
-					cmd.attr('data-alertlevel','danger');
-				}else{
-					cmd.removeClass('label-warning label-danger')
-					cmd.attr('data-alertlevel','none');
-				}
-			}
-		}
-		jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
-		if(!isNaN(parseInt('#maxHeight#'))){
-			$('.cmd[data-cmd_id=#id#]').css('max-height',parseInt('#maxHeight#')+'px');
-		}
-	</script>
+  <div class="content-xs">
+    <span class="cmdName #hide_name#">#name_display#<br/></span><strong class="state" ></strong>
+  </div>
+  <script>
+    jeedom.cmd.update['#id#'] = function(_options) {
+      cmd = $('.cmd[data-cmd_id=#id#]')
+      cmd.attr('title','Date de valeur : '+_options.valueDate+'<br/>Date de collecte : '+_options.collectDate)
+      cmd.find('.state').empty().append(_options.display_value)
+
+      if (_options.alertLevel) {
+        if (_options.alertLevel == 'warning') {
+          cmd.addClass('label-warning')
+          cmd.attr('data-alertlevel','warning')
+        } else if (_options.alertLevel == 'danger') {
+          cmd.addClass('label-danger')
+          cmd.attr('data-alertlevel','danger')
+        } else {
+          cmd.removeClass('label-warning label-danger')
+          cmd.attr('data-alertlevel','none')
+        }
+      }
+    }
+
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+
+    if (!isNaN(parseInt('#maxHeight#'))) {
+      $('.cmd[data-cmd_id=#id#]').css('max-height', parseInt('#maxHeight#')+'px')
+    }
+  </script>
 </div>
